--- a/mTcping/mTcping.csproj
+++ b/mTcping/mTcping.csproj
@@ -11,8 +11,9 @@
   <ItemGroup>
     <RuntimeHostConfigurationOption Include="System.Globalization.Invariant" Value="true" />
     <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="3.0.0" />
-    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-alpha.1.20576.2" />
-    <PackageReference Include="runtime.win-x64.Microsoft.DotNet.ILCompiler" Version="6.0.0-alpha.1.20576.2" />
+    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="6.0.0-alpha.1.20578.3" />
+    <PackageReference Include="runtime.linux-x64.Microsoft.DotNet.ILCompiler" Version="6.0.0-alpha.1.20578.3" />
+    <PackageReference Include="runtime.win-x64.Microsoft.DotNet.ILCompiler" Version="6.0.0-alpha.1.20578.3" />
   </ItemGroup>
 
 </Project>
