--- a/mTcping.csproj
+++ b/mTcping.csproj
@@ -2,13 +2,10 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>.net6.0</TargetFramework>
+    <TargetFramework>.net7.0</TargetFramework>
     <AssemblyName>tcping</AssemblyName>
-    <PublishReadyToRun>false</PublishReadyToRun>
-    <TrimMode>Link</TrimMode>
-    <IlcOptimizationPreference>Size</IlcOptimizationPreference>
-    <IlcFoldIdenticalMethodBodies>true</IlcFoldIdenticalMethodBodies>
-    <EnableUnsafeBinaryFormatterSerialization>true</EnableUnsafeBinaryFormatterSerialization>
+    <PublishAot>true</PublishAot>
+    <StripSymbols>true</StripSymbols>
   </PropertyGroup>
 
   <ItemGroup>
