--- a/mTcping.csproj
+++ b/mTcping.csproj
@@ -2,16 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>.net7.0</TargetFramework>
+    <TargetFramework>.net8.0</TargetFramework>
     <AssemblyName>tcping</AssemblyName>
     <PublishAot>true</PublishAot>
     <StripSymbols>true</StripSymbols>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="IPNetwork2" Version="2.6.573" />
-    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.0.2" />
-    <PackageReference Include="Microsoft.DotNet.ILCompiler" Version="8.0.0-preview.2.23128.3" />
+    <PackageReference Include="IPNetwork2" Version="2.6.618" >
+      <Aliases>IPNetwork2</Aliases>
+    </PackageReference>
+    <PackageReference Include="McMaster.Extensions.CommandLineUtils" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
