--- a/mTcping.csproj
+++ b/mTcping.csproj
@@ -4,7 +4,9 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net9.0</TargetFramework>
     <AssemblyName>tcping</AssemblyName>
-    <PublishAot>true</PublishAot>
+    <PublishSingleFile>true</PublishSingleFile>
+    <!--<PublishAot>true</PublishAot>-->
+    <PublishTrimmed>true</PublishTrimmed>
     <StripSymbols>true</StripSymbols>
   </PropertyGroup>
 
