--- a/mTcping.csproj
+++ b/mTcping.csproj
@@ -7,6 +7,7 @@
     <PublishSingleFile>true</PublishSingleFile>
     <!--<PublishAot>true</PublishAot>-->
     <PublishTrimmed>true</PublishTrimmed>
+    <PublishReadyToRun>true</PublishReadyToRun>
     <StripSymbols>true</StripSymbols>
   </PropertyGroup>
 
